#3539 - FAQ feedback tweaks            - fixed messed up layout due to incorrect extension of the two-column layout             - fixed layout that caused the scroll bar             - hide the scrollbar thou - transformation seems to cause scroll bars on linux even if content should fit

--- a/ckanext-hdx_theme/ckanext/hdx_theme/less/widget/faq/faq.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/less/widget/faq/faq.less
@@ -28,17 +28,23 @@
 }
 
 #faq-send-message {
-  overflow: scroll;
-  height: 400px;
-
   .captcha{
     overflow: hidden;
   }
 }
 
 #faqSendMsgPopup{
-  .two-column-widget .two-column-left {
-    background-color: #1ebfb3;
+  .two-column-widget {
+    .two-column-left {
+      background-color: #1ebfb3;
+      height: @widgetHeight;
+    }
+
+    @extraPaddingTwoColumnRight: 50px;
+    .two-column-right {
+      height: @widgetHeight;
+      padding: @paddingLarge;
+    }
   }
 }
 
